[gd_scene load_steps=6 format=3 uid="uid://dynm7se0gewia"]

[ext_resource type="Script" uid="uid://bqmfav66fbuh4" path="res://Scenes/UI/settings_menu.gd" id="1_cs2gm"]
[ext_resource type="Texture2D" uid="uid://b67nm148cfyt6" path="res://Scenes/UI/Assets/modal_frame.png" id="1_kfh4b"]
[ext_resource type="Theme" uid="uid://metrw8hf6qy1" path="res://Scenes/UI/base_theme.tres" id="2_ynxh7"]
[ext_resource type="PackedScene" uid="uid://cm4u7at475mjr" path="res://Scenes/UI/volume_group.tscn" id="4_n6o6n"]
[ext_resource type="PackedScene" uid="uid://co4vy8ojvpmq7" path="res://Scenes/UI/custom_button.tscn" id="5_cs2gm"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cs2gm")
pause_menu_back_button_position = Vector2(83, 102)
pause_menu_test_button_position = Vector2(135, 102)

[node name="PanelBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = 60.0
offset_right = 270.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("1_kfh4b")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
metadata/_edit_lock_ = true

[node name="MasterLabel" type="Label" parent="PanelBackground"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 68.0
offset_bottom = 26.0
theme = ExtResource("2_ynxh7")
text = "MASTER"
metadata/_edit_lock_ = true

[node name="MasterVolumeGroup" parent="PanelBackground" instance=ExtResource("4_n6o6n")]
offset_left = 76.0
offset_top = 8.0
offset_right = 191.0
offset_bottom = 30.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/MasterVolumeGroup/DownButton" index="1"]
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../../UpButton/Button")
focus_neighbor_bottom = NodePath("../../../MusicVolumeGroup/DownButton/Button")
focus_next = NodePath("../../UpButton/Button")
focus_previous = NodePath("../../../TestButton/Button")

[node name="Button" parent="PanelBackground/MasterVolumeGroup/UpButton" index="1"]
focus_neighbor_left = NodePath("../../DownButton/Button")
focus_neighbor_bottom = NodePath("../../../MusicVolumeGroup/UpButton/Button")
focus_next = NodePath("../../../MusicVolumeGroup/DownButton/Button")
focus_previous = NodePath("../../DownButton/Button")

[node name="MusicLabel" type="Label" parent="PanelBackground"]
layout_mode = 0
offset_left = 25.0
offset_top = 45.0
offset_right = 68.0
offset_bottom = 57.0
theme = ExtResource("2_ynxh7")
text = "MUSIC"
metadata/_edit_lock_ = true

[node name="MusicVolumeGroup" parent="PanelBackground" instance=ExtResource("4_n6o6n")]
offset_left = 76.0
offset_top = 39.0
offset_right = 191.0
offset_bottom = 61.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/MusicVolumeGroup/DownButton" index="1"]
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../MasterVolumeGroup/DownButton/Button")
focus_neighbor_right = NodePath("../../UpButton/Button")
focus_neighbor_bottom = NodePath("../../../SFXVolumeGroup/DownButton/Button")
focus_next = NodePath("../../UpButton/Button")
focus_previous = NodePath("../../../MasterVolumeGroup/UpButton/Button")

[node name="Button" parent="PanelBackground/MusicVolumeGroup/UpButton" index="1"]
focus_neighbor_left = NodePath("../../DownButton/Button")
focus_neighbor_top = NodePath("../../../MasterVolumeGroup/UpButton/Button")
focus_neighbor_bottom = NodePath("../../../SFXVolumeGroup/UpButton/Button")
focus_next = NodePath("../../../SFXVolumeGroup/DownButton/Button")
focus_previous = NodePath("../../DownButton/Button")

[node name="SFXLabel" type="Label" parent="PanelBackground"]
layout_mode = 0
offset_left = 42.0
offset_top = 76.0
offset_right = 69.0
offset_bottom = 88.0
theme = ExtResource("2_ynxh7")
text = "SFX"
metadata/_edit_lock_ = true

[node name="SFXVolumeGroup" parent="PanelBackground" instance=ExtResource("4_n6o6n")]
offset_left = 76.0
offset_top = 70.0
offset_right = 191.0
offset_bottom = 92.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/SFXVolumeGroup/DownButton" index="1"]
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../MusicVolumeGroup/DownButton/Button")
focus_neighbor_right = NodePath("../../UpButton/Button")
focus_neighbor_bottom = NodePath("../../../BackButton/Button")
focus_next = NodePath("../../UpButton/Button")
focus_previous = NodePath("../../../MusicVolumeGroup/UpButton/Button")

[node name="Button" parent="PanelBackground/SFXVolumeGroup/UpButton" index="1"]
focus_neighbor_left = NodePath("../../DownButton/Button")
focus_neighbor_top = NodePath("../../../MusicVolumeGroup/UpButton/Button")
focus_neighbor_bottom = NodePath("../../../TestButton/Button")
focus_next = NodePath("../../../BackButton/Button")
focus_previous = NodePath("../../DownButton")

[node name="BackButton" parent="PanelBackground" instance=ExtResource("5_cs2gm")]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 121.0
offset_bottom = 120.0

[node name="FocusTexture" parent="PanelBackground/BackButton" index="0"]
offset_right = 41.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/BackButton" index="1"]
offset_right = 38.0
metadata/_edit_lock_ = true

[node name="Frame" parent="PanelBackground/BackButton/Button" index="0"]
offset_right = 38.0
metadata/_edit_lock_ = true

[node name="Text" parent="PanelBackground/BackButton/Button" index="1"]
offset_right = 35.0
text = "Back"
metadata/_edit_lock_ = true

[node name="TestButton" parent="PanelBackground" instance=ExtResource("5_cs2gm")]
layout_mode = 0
offset_left = 135.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 120.0

[node name="FocusTexture" parent="PanelBackground/TestButton" index="0"]
offset_right = 41.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/TestButton" index="1"]
offset_right = 38.0
focus_neighbor_left = NodePath("../../BackButton/Button")
focus_neighbor_top = NodePath("../../SFXVolumeGroup/UpButton/Button")
focus_neighbor_right = NodePath(".")
focus_next = NodePath("../../MasterVolumeGroup/DownButton/Button")
focus_previous = NodePath("../../BackButton/Button")
metadata/_edit_lock_ = true

[node name="Frame" parent="PanelBackground/TestButton/Button" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.013
anchor_right = -0.013
offset_left = 0.494
offset_right = 38.494
metadata/_edit_lock_ = true

[node name="Text" parent="PanelBackground/TestButton/Button" index="1"]
offset_right = 35.0
text = "Test"
metadata/_edit_lock_ = true

[node name="QuitButton" parent="PanelBackground" instance=ExtResource("5_cs2gm")]
offset_left = 36.0
offset_top = 102.0
offset_right = 69.0
offset_bottom = 120.0

[node name="FocusTexture" parent="PanelBackground/QuitButton" index="0"]
offset_right = 36.0
metadata/_edit_lock_ = true

[node name="Button" parent="PanelBackground/QuitButton" index="1"]
offset_right = 33.0
focus_neighbor_right = NodePath("../../BackButton/Button")
focus_next = NodePath("../../BackButton/Button")
focus_previous = NodePath("../../SFXVolumeGroup/UpButton/Button")
metadata/_edit_lock_ = true

[node name="Frame" parent="PanelBackground/QuitButton/Button" index="0"]
offset_right = 33.0
metadata/_edit_lock_ = true

[node name="Text" parent="PanelBackground/QuitButton/Button" index="1"]
offset_right = 30.0
text = "Quit"
metadata/_edit_lock_ = true

[connection signal="volume_down_pressed" from="PanelBackground/MasterVolumeGroup" to="." method="_on_master_volume_group_volume_down_pressed"]
[connection signal="volume_up_pressed" from="PanelBackground/MasterVolumeGroup" to="." method="_on_master_volume_group_volume_up_pressed"]
[connection signal="volume_down_pressed" from="PanelBackground/MusicVolumeGroup" to="." method="_on_music_volume_group_volume_down_pressed"]
[connection signal="volume_up_pressed" from="PanelBackground/MusicVolumeGroup" to="." method="_on_music_volume_group_volume_up_pressed"]
[connection signal="volume_down_pressed" from="PanelBackground/SFXVolumeGroup" to="." method="_on_sfx_volume_group_volume_down_pressed"]
[connection signal="volume_up_pressed" from="PanelBackground/SFXVolumeGroup" to="." method="_on_sfx_volume_group_volume_up_pressed"]
[connection signal="pressed" from="PanelBackground/BackButton" to="." method="_on_back_button_pressed"]

[editable path="PanelBackground/MasterVolumeGroup"]
[editable path="PanelBackground/MasterVolumeGroup/DownButton"]
[editable path="PanelBackground/MasterVolumeGroup/UpButton"]
[editable path="PanelBackground/MusicVolumeGroup"]
[editable path="PanelBackground/MusicVolumeGroup/DownButton"]
[editable path="PanelBackground/MusicVolumeGroup/UpButton"]
[editable path="PanelBackground/SFXVolumeGroup"]
[editable path="PanelBackground/SFXVolumeGroup/DownButton"]
[editable path="PanelBackground/SFXVolumeGroup/UpButton"]
[editable path="PanelBackground/BackButton"]
[editable path="PanelBackground/TestButton"]
[editable path="PanelBackground/QuitButton"]
